added verification method to check if google-play-service is available on the phone and show a popup to ask to install it if not.

--- a/dependencies/android/project.properties
+++ b/dependencies/android/project.properties
@@ -9,8 +9,10 @@
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+android.library=true
 
+android.library.reference.1=../extension-api
 # Project target.
 target=android-::ANDROID_TARGET_SDK_VERSION::
-android.library=true
+
 manifestmerger.enabled=true
