--- a/dependencies/android/AndroidManifest.xml
+++ b/dependencies/android/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2012 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -11,10 +12,15 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
---><!-- From: file:/usr/local/google/buildbot/repo_clients/https___googleplex-android.googlesource.com_a_platform_manifest.git/ub-gcore-manchego-release/vendor/unbundled_google/packages/OneUp/client/AndroidManifest.xml -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="6111000" android:versionName="6.1.11-000" package="com.google.android.gms">
-    <uses-sdk android:minSdkVersion="3"/>
-	<application>
-		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+-->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.google.android.gms">
+    <uses-sdk android:minSdkVersion="::ANDROID_MINIMUM_SDK_VERSION::"/>
+
+    <application>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
+
 </manifest>
